Fix views of admins

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -33,6 +33,9 @@
     <script src="/vendor.js"></script>
     <script src="/app.js"></script>
 
+    <!-- For print to pdf -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.debug.js"></script>
+
     <script>require('initialize');</script>
 </head>
 <body>
